2008-12-01  Scott Ellington  <scott.ellington@gmail.com>

	* Data/KeyholeMarkupLanguage.cs: icons and tessellate

2008-12-01  Scott Ellington  <scott.ellington@gmail.com>

	* Data/KeyholeMarkupLanguage.cs: support styles in kml

	* Layer.cs:
	* Drawing/MapDrawer.cs: move get style methods to Layer

	* Style.cs:
	* Xml/Serialization/MapSerializer.cs: add Style.Id

2008-11-24  Scott Ellington  <scott.ellington@gmail.com>

	* Data/KeyholeMarkupLanguage.cs: support transform

2008-11-24  Scott Ellington  <scott.ellington@gmail.com>

	



2008-11-22  Scott Ellington  <scott.ellington@gmail.com>

	



2008-11-21  Scott Ellington <scott.ellington@gmail.com> 

	* Point.cs, Rectangle.cs: operator overrides should check for nulls
	* Web/TileProvider.cs: refactor

2008-11-18  Scott Ellington <scott.ellington@gmail.com> 

	* Projection/ProjFourWrapper.cs: add TryParseEpsg
	* Web/TileProvider.cs: support tms/openLayers

2008-11-12  Scott Ellington <scott.ellington@gmail.com> 

	* Data/WellKnownText, Data/WellKnownText/SimpleFeatureAccess.cs,
	  Data/WellKnownText.cs, Cumberland.csproj: rename WellKnownText to
	  SimpleFeatureAccess

2008-11-10  Scott Ellington <scott.ellington@gmail.com> 

	

2008-11-10  Scott Ellington <scott.ellington@gmail.com> 

	* MapConfigurationException.cs, Drawing/MapConfigurationException.cs,
	  Cumberland.csproj: move exception class
	* Point.cs: remove z/m coordinates

2008-11-10  Scott Ellington <scott.ellington@gmail.com> 

	* Drawing/MapDrawer.cs: adhere to LineStyle.None for polygons

2008-11-10  Scott Ellington <scott.ellington@gmail.com> 

	* Feature.cs, Data/Shapefile/Shapefile.cs: remove Feature.Id

2008-11-10  Scott Ellington <scott.ellington@gmail.com> 

	* WellKnownText.cs, Data/WellKnownText.cs, Cumberland.csproj: move WKT
	  int Data ns

2008-11-10  Scott Ellington <scott.ellington@gmail.com> 

	* Data/Shapefile/DBaseIIIFile.cs: properly handle logical booleans

2008-11-10  Scott Ellington <scott.ellington@gmail.com> 
